@@ -1,30 +1,33 @@
 package frc.robot.utility;
 
+import edu.wpi.first.math.Pair;
+
 import java.util.ArrayList;
 
 public class LookUpTable {
-    public static ArrayList<AutoAimValue> listOfValues = new ArrayList<>() {
+    public static ArrayList<Pair<Double, Double>> lookUpTable = new ArrayList<>() {
         {
             //add AutoAimValues here
         }
     };
 
-    public static AutoAimValue findValue(double distance) {
-        AutoAimValue lowAutoAimValue = listOfValues.get(0);
-        AutoAimValue highAutoAimValue = listOfValues.get(listOfValues.size() - 1);
-        for (int i = 0; i < listOfValues.size() - 1; i++) {
-            if (distance > listOfValues.get(i).distance && distance < listOfValues.get(i + 1).distance) {
-                lowAutoAimValue = listOfValues.get(i);
-                highAutoAimValue = listOfValues.get(i + 1);
+    public static double findValue(double distance) {
+        if (lookUpTable.size() < 2) {
+            return 40;
+        }
+        Pair<Double, Double> lowAutoAimValue = lookUpTable.get(0);
+        Pair<Double, Double> highAutoAimValue = lookUpTable.get(lookUpTable.size() - 1);
+        for (int i = 0; i < lookUpTable.size() - 1; i++) {
+            if (distance > lookUpTable.get(i).getFirst() && distance < lookUpTable.get(i + 1).getFirst()) {
+                lowAutoAimValue = lookUpTable.get(i);
+                highAutoAimValue = lookUpTable.get(i + 1);
                 break;
             }
         }
 
-        double percentInBetween = (distance - lowAutoAimValue.distance) / (highAutoAimValue.distance - lowAutoAimValue.distance);
+        double percentInBetween = (distance - lowAutoAimValue.getFirst()) / (highAutoAimValue.getFirst() - lowAutoAimValue.getFirst());
 
-        double armAngle = lowAutoAimValue.armAngle - (percentInBetween * (lowAutoAimValue.armAngle - highAutoAimValue.armAngle));
-        double shooterRPM = lowAutoAimValue.shooterRPM + (percentInBetween * (highAutoAimValue.shooterRPM - lowAutoAimValue.shooterRPM));
-
-        return new AutoAimValue(distance, armAngle, shooterRPM);
+        return lowAutoAimValue.getSecond()
+                - (percentInBetween * (lowAutoAimValue.getSecond() - highAutoAimValue.getSecond()));
     }
 }
